Media pipeline unit tests pass. Need better unit tests, though. Also fix for bug 781281